# stm32f4_uCLinux_REST_bsp

./: ACTIVATE.sh  README.md
A2F/dropbear/: Makefile  config.status
A2F/i2c-tools-3.1.0/: Makefile
A2F/net-snmp/: Makefile  config.status  libtool  net-snmp-config
A2F/qt-4.7.3/: .qmake.cache  Makefile  config.status
A2F/qt-4.7.3/demos/Qt_GUI/: Makefile.am  Makefile.in  gui.c  gui.h  ranger.cpp
A2F/qt-4.7.3/demos/Qt_GUI/Qt_skin/: Makefile  Makefile~  config.json  createpanels.cpp  dailyschedule.cpp  dailyschedule.h  day.cpp  day.h  hvacconfig.cpp  hvacconfig.h  period.cpp  period.h  ranger.cpp  ranger.h  ranger.h~  ranger.pro  ranger.pro.user.1.3  ranger.pro.user.qt4  ranger.pro~  ranger.qrc  ranger_es.ts  rangercommon.cpp  rangercommon.h  roundedpolygon.cpp  roundedpolygon.h  schedule.cpp  schedule.h  stats.json  thermostat.cpp  translate.bat  wordss.xlsx
A2F/qt-4.7.3/demos/Qt_GUI/Qt_skin/.moc/release-static-emb-arm-uclinuxeabi/: moc_ranger.cpp  moc_rangercommon.cpp
A2F/qt-4.7.3/demos/Qt_GUI/Qt_skin/.rcc/release-static-emb-arm-uclinuxeabi/: qrc_ranger.cpp
A2F/qt-4.7.3/demos/Qt_GUI/Qt_skin/qss/: blue.qss  green.qss  lightBlue.qss  pink.qss  red.qss  yellow.qss
A2F/qt-4.7.3/demos/Qt_GUI/demo/: Makefile  ranger.cpp  ranger.h  ranger.pro  ranger_build
image/: emcraft_map  image.sh
projects/: Rules.make
projects/developer/: developer.busybox  developer.initramfs  developer.kernel.S  developer.kernel.STMDISCO.orig  rest.config
projects/developer_REST_V1/: Makefile  developer_REST_V1.busybox  developer_REST_V1.initramfs  (+3 more)
u-boot/: Makefile
(+454 files in other folders)
